--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "react-flag-kit": "^1.0.0",
     "react-i18next": "^11.15.1",
     "react-icons": "^4.2.0",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
